@@ -440,6 +440,20 @@ $(document).ready(function() {
         }) // end $.get
     })// end of the paginate users table
 
+    /*
+     * Additional confirmation dialog after clicking 
+     * 'Drop the databases...'
+     */
+    $('#checkbox_drop_users_db').click(function() {
+        $this_checkbox = $(this);
+        if ($this_checkbox.is(':checked')) {
+            var is_confirmed = confirm(PMA_messages['strDropDatabaseStrongWarning'] + '\n' + PMA_messages['strDoYouReally'] + ' :\nDROP DATABASE');
+            if (! is_confirmed) {
+                $this_checkbox.attr('checked', false);
+            }
+        }
+    });
+
 }, 'top.frame_content'); //end $(document).ready()
 
 /**#@- */
